--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		{% if page.title != null %}
 		<title>{{ page.title }} | {{ site.title }} </title>
@@ -12,8 +12,17 @@
 
 		<meta name="description" content="{{ page.description }}">
 		<link rel="stylesheet" href="/assets/css/main.css">
+		<link rel="shortcut icon" href="/assets/images/favicon.png" type="image/png">
 	</head>
 	<body>
-		{{ content }}
+		<header class="main-header">
+			{% include header.html %}
+		</header>
+		<section class="main-content">
+			{{ content }}
+		</section>
+		<footer class="main-footer">
+			{% include footer.html %}
+		</footer>
 	</body>
 </html>
