first complete draft

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,4 @@
-<div class="copyright">© 2021 BubbleFishStudio</div>
+<div class="footline">
+	<div class="copyright">© 2021 BubbleFishStudio</div>
+</div>
 
