--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,12 @@
 	<div class="brand navbar-brand">
 		<a class="nav-link" href="/">
 			<img class="brand-logo" src="/assets/images/logo.png">
-			<span class="brand-name">BubbleFishStudio</span>
+			<span class="brand-name">{{site.title}}</span>
 		</a>
 	</div>
 	<div class="navbar-nav">
 		{% for link in site.data.navlinks %}
-			<a class="nav-link" href="{{link.url}}"><span class="fa fa-fw {{link.icon}}"></span>{{link.name}}</a>
+			<a class="nav-link {% if link.url == page.url %}active{% endif %}" href="{{link.url}}"><span class="fa fa-fw {{link.icon}}"></span>{{link.name}}</a>
 		{% endfor %}
 	</div>
 </nav>
