--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,10 @@
 	</div>
 	<div class="navbar-nav">
 		{% for link in site.data.navlinks %}
-			<a class="nav-link {% if link.url == page.url %}active{% endif %}" href="{{link.url}}"><span class="fa fa-fw {{link.icon}}"></span>{{link.name}}</a>
+			<a class="nav-link {% if link.url == page.url %}active{% endif %}" href="{{link.url}}" {% if link.external %}target="_blank"{% endif %}>
+				<span class="fa-fw {{link.icon}}"></span>
+				{{link.name}}
+			</a>
 		{% endfor %}
 	</div>
 </nav>
